# brainfuck

./: .gitignore  Cargo.toml  LICENSE  README.md  go.py
res/: bench.bf  hello_world.bf  to_upper.bf
src/: ir.rs  lib.rs  main.rs  main_interpreter.rs  main_ir.rs  main_jit.rs  opcode.rs
tests/: test_ir.rs
