[package]
name = "brainfuck"
version = "0.1.0"
authors = ["mohanson <mohanson@outlook.com>"]
edition = "2018"
default-run = "brainfuck_interpreter"

[[bin]]
name = "brainfuck_interpreter"
path = "src/main_interpreter.rs"

[[bin]]
name = "brainfuck_ir"
path = "src/main_ir.rs"

[[bin]]
name = "brainfuck_jit"
path = "src/main_jit.rs"

[dependencies]
dynasm = "0.6"
dynasmrt = "0.6"
itertools = "*"
