[package]
name = "brainfuck"
version = "0.2.0"
authors = ["mohanson <mohanson@outlook.com>"]
edition = "2024"
default-run = "brainfuck_interpreter"

[[bin]]
name = "brainfuck_interpreter"
path = "src/main_interpreter.rs"

[[bin]]
name = "brainfuck_ir"
path = "src/main_ir.rs"

[[bin]]
name = "brainfuck_jit"
path = "src/main_jit.rs"

[dependencies]
dynasm = "3.0"
dynasmrt = "3.0"
